@@ -2,6 +2,8 @@ Changes between 2.3.3 and 2.3.4.dev
 -----------------------------------
 
 - fix issue91 - add/discuss package/directory level setups in example
+- allow to dynamically define markers/keywords via
+  item.keywords[...]=assignment
 
 Changes between 2.3.2 and 2.3.3
 -----------------------------------
